--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,7 +4,11 @@ PORT=5000
 API_BASE_URL=http://localhost:5000
 
 # CORS Configuration
-CORS_ORIGIN=http://localhost:3000
+# Single origin
+# CORS_ORIGIN=http://localhost:3000
+# Or multiple origins (comma-separated)
+CORS_ORIGIN=http://localhost:3000,https://aam-frontend-olive.vercel.app/
+# Note: All *.vercel.app domains are automatically allowed for Vercel preview deployments
 
 # Database Configuration
 MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/arshinagar-accounts
