Updated backend env

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,7 +7,7 @@ API_BASE_URL=http://localhost:5000
 # Single origin
 # CORS_ORIGIN=http://localhost:3000
 # Or multiple origins (comma-separated)
-CORS_ORIGIN=http://localhost:3000,https://aam-frontend-olive.vercel.app/
+CORS_ORIGIN=http://localhost:3000,https://aam-frontend-olive.vercel.app
 # Note: All *.vercel.app domains are automatically allowed for Vercel preview deployments
 
 # Database Configuration
